@@ -1,1 +1,0 @@
-This is the video driver for ATI Radeon HD cards for the modular Xorg server.
