@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.11 2009/10/14 18:50:20 hasso Exp $
-
-SHA1 (xf86-video-radeonhd-1.3.0.tar.bz2) = 4cdcdbcdc6ec7cd4caa19afdbfc34a8bec461f56
-RMD160 (xf86-video-radeonhd-1.3.0.tar.bz2) = 1f396df814872caf2b58f36929f7b6d1db16959f
-Size (xf86-video-radeonhd-1.3.0.tar.bz2) = 772985 bytes
